<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_search">

    <fragment
        android:id="@+id/navigation_add"
        android:name="com.example.protography.ui.Fragments.AddFragment"
        android:label="@string/add"
        tools:layout="@layout/fragment_add" />

    <fragment
        android:id="@+id/navigation_search"
        android:name="com.example.protography.ui.Fragments.MapsFragment"
        android:label="@string/search"
        tools:layout="@layout/fragment_maps" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.example.protography.ui.Fragments.ProfileFragment"
        android:label="@string/profile"
        tools:layout="@layout/fragment_profile" />
</navigation>